<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.boge.bogebook.mvp.ui.activity.BookDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/book_detail"
            app:navigationIcon="@mipmap/ab_back" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="@color/common_bg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/item_margin1">
                <ImageView
                    android:id="@+id/iv_book_icon"
                    android:layout_alignParentLeft="true"
                    android:layout_width="60dp"
                    android:layout_height="80dp"/>
                <TextView
                    android:layout_toRightOf="@+id/iv_book_icon"
                    android:id="@+id/tv_book_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/item_margin1"
                    android:layout_marginBottom="8dp"
                    android:textStyle="bold"
                    android:textSize="@dimen/middle_size"
                    />
                <TextView
                    android:layout_below="@+id/tv_book_title"
                    android:layout_toRightOf="@+id/iv_book_icon"
                    android:id="@+id/tv_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="@dimen/item_margin1"
                    android:textSize="@dimen/small_size"
                    android:textColor="@color/orange"
                    />
                <TextView
                    android:layout_below="@+id/tv_book_title"
                    android:layout_toRightOf="@+id/tv_author"
                    android:id="@+id/tv_cat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="@dimen/item_margin1"
                    android:textSize="@dimen/small_size"/>
                <TextView
                    android:layout_below="@+id/tv_book_title"
                    android:layout_toRightOf="@+id/tv_cat"
                    android:id="@+id/tv_word_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="@dimen/item_margin1"
                    android:textSize="@dimen/small_size"/>
                <TextView
                    android:layout_below="@+id/tv_author"
                    android:layout_toRightOf="@+id/iv_book_icon"
                    android:id="@+id/tv_lately_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/item_margin1"
                    android:textSize="@dimen/small_size"
                    />
                <LinearLayout
                    android:layout_below="@+id/iv_book_icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">
                    <com.boge.bogebook.view.DrawableCenterButton
                        android:id="@+id/btn_update"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/red"
                        android:gravity="left|center"
                        android:drawableLeft="@mipmap/book_detail_info_add_img"
                        android:drawablePadding="5dp"
                        android:textColor="@color/white"
                        android:text="@string/update"
                        android:textStyle="bold"
                        android:textSize="@dimen/large_size"
                        />
                    <com.boge.bogebook.view.DrawableCenterButton
                        android:id="@+id/btn_start_read"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="@dimen/item_margin1"
                        android:background="@color/red"
                        android:gravity="left|center"
                        android:drawableLeft="@mipmap/book_detail_info_search_img"
                        android:drawablePadding="5dp"
                        android:textColor="@color/white"
                        android:text="@string/start_read"
                        android:textStyle="bold"
                        android:textSize="@dimen/large_size"
                        />
                </LinearLayout>
            </RelativeLayout>
            <View
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/item_margin1"
                android:layout_marginRight="@dimen/item_margin1"
                android:layout_marginBottom="@dimen/item_margin1"
                android:background="@color/common_h3" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/item_margin1"
                android:layout_marginRight="@dimen/item_margin1"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/middle_size"
                        android:text="@string/read_conut"/>
                    <TextView
                        android:id="@+id/tv_read_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/middle_size"
                        android:textColor="@color/colorPrimaryText"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/middle_size"
                        android:text="@string/reader_liu"/>
                    <TextView
                        android:id="@+id/tv_reader_retained"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/middle_size"
                        android:textColor="@color/colorPrimaryText"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/middle_size"
                        android:text="@string/day_update_word_count"/>
                    <TextView
                        android:id="@+id/tv_day_update_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/middle_size"
                        android:textColor="@color/colorPrimaryText"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/item_margin1"
                android:background="@color/common_h3" />
            <com.boge.bogebook.view.TagGroup
                android:id="@+id/tv_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/item_margin1"
                android:layout_marginRight="@dimen/item_margin1"/>
            <View
                android:id="@+id/view_line"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/item_margin1"
                android:background="@color/common_h3" />
            <TextView
                android:id="@+id/tv_longIntro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/item_margin1"
                android:layout_marginRight="@dimen/item_margin1"
                android:textColor="@color/colorPrimaryText"
                android:maxLines="4"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/common_gray_bg"/>
        </LinearLayout>
    </ScrollView>


</android.support.design.widget.CoordinatorLayout>
